adding '&' capabilities to GET /recalls and GET /recalls/search with repeated parametes as well as comma separated list that is prevalided before length/enum validation. Also fixed UPC lookup bug in GET /products/search to fix actual object shape in gold (schema fix tabled for coordinated refactor
